httpbin-oidc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-oidc
  namespace: istio-system
spec:
  selector:
    app: istio-ingressgateway-oidc
  servers:
  # As the oauth2-proxy is using port 80 we need to go directly to port 8080
  # which is used by the Istio ingress gateway.
  - port: 
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin-oidc
  namespace: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/gateway-oidc
  http:
  # As the oauth2-proxy is using port 80 we need to go directly to port 8080
  # which is used by the Istio ingress gateway.
  - match:
    - port: 8080
    route:
    - destination:
        port:
          number: 80
        host: httpbin
---
